implemented password reset functionality via code sent by email

--- a/petdrop/src/main/resources/application.properties
+++ b/petdrop/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.application.name=petdrop
-spring.data.mongodb.uri=mongodb+srv://bbryan0316:RPuBsViLuXoRBPYZ@cluster0.0jhhs.mongodb.net/petdrop
-spring.data.mongodb.database=petdrop
-server.port=8080
+spring.application.name=${SPRING_APPLICATION_NAME}
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
+spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE}
+server.port=${SERVER_PORT}
+
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH}
+spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE}
+spring.mail.from=${SPRING_MAIL_FROM}
